--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#1f77ef</item>
         <item name="colorPrimaryVariant">#164c9e</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">#1d73ee</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
